Исправление кода, для прохождения тестов postman Добавил postman тесты